--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -2,21 +2,15 @@
 import type { Props } from "@astrojs/starlight/props";
 
 import Search from "@astrojs/starlight/components/Search.astro";
-import SiteTitle from "@astrojs/starlight/components/SiteTitle.astro";
 import ThemeSelect from "@astrojs/starlight/components/ThemeSelect.astro";
 import SocialIcons from "@astrojs/starlight/components/SocialIcons.astro";
 import LanguageSelect from "@astrojs/starlight/components/LanguageSelect.astro";
-import textLight from '../../src/assets/binsider-text-light.png';
-import textDark from '../../src/assets/binsider-text-dark.png';
+import Logo from '../components/Logo.astro';
 
 ---
 
 <div class="flex h-full items-center justify-between">
-  <div class="flex items-center">
-    <SiteTitle {...Astro.props} />
-    <img class="light:sl-hidden ml-3 max-h-6" src={textDark.src} alt="Light text" />
-    <img class="dark:sl-hidden ml-3 max-h-6" src={textLight.src} alt="Dark text"/>
-  </div>
+  <Logo {...Astro.props} />
   <div class="flex flex-grow"></div>
   <div class="flex px-6">
     <Search {...Astro.props} />
