chore(website): add demo image before the hero

--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -8,6 +8,7 @@ const isHomepage = Astro.props.slug === '';
 
 {
   isHomepage ? (
+    <hr style="border: 0; border-top: 1px solid var(--sl-color-gray-5); width: 50%; margin: 20px auto;">
     <footer class="footer">
       <div class="container">
         <p>
