chore(website): update style

--- a/website/src/components/Hero.astro
+++ b/website/src/components/Hero.astro
@@ -8,7 +8,7 @@ import demoImage from '../../src/assets/binsider-general-tab.png';
 <div style="text-align: center;">
   <img
     src={demoImage.src}
-    style="margin: 0;"
+    style="margin: 0; max-width: 100%; height: auto;"
     alt="demo"
   />
 </div>
