--- a/website/src/styles/custom.css
+++ b/website/src/styles/custom.css
@@ -1,8 +1,8 @@
 :root {
   --sl-font: "DejaVu Sans";
   --sl-color-accent-low: #2e2c2b;
-  --sl-color-accent: #6a9589;
-  --sl-color-accent-high: #a0936e;
+  --sl-color-accent: #7aa89f;
+  --sl-color-accent-high: #e6c384;
   --sl-color-white: #dcd7ba;
   --sl-color-gray-1: #e8e6e3;
   --sl-color-gray-2: #cfcfcf;
