--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -12,16 +12,20 @@ const isHomepage = Astro.props.slug === '';
     <footer class="footer">
       <div class="container">
         <p>
-        Built with <a href="https://rustlang.org" target="_blank" rel="noopener noreferrer">Rust</a> & <a href="https://ratatui.rs" target="_blank" rel="noopener noreferrer">Ratatui</a> 🦀🐁 <span class="small-text">with 🖤 from @orhun</p>
+          Built with <a class="hero-link" href="https://rustlang.org" target="_blank" rel="noopener noreferrer">Rust</a>
+            <span class="small-text"> & </span> <a class="hero-link" href="https://ratatui.rs" target="_blank" rel="noopener noreferrer">Ratatui</a> 🦀🐁
+            <span class="small-text">with 🖤 from <a class="author-link" href="https://github.com/orhun" target="_blank" rel="noopener noreferrer">@orhun</a></p>
         </p>
+    <a class="repo-link" href="https://github.com/orhun/binsider" target="_blank" rel="noopener noreferrer">
         <Stat />
+      </a>
         <br>
         <br>
         <p class="small-text">&copy; {new Date().getFullYear()} Binsider. All rights reserved.</p>
         <p class="small-text">
         </p>
         <p class="small-text">In memory of Jia Tan 🏴</p>
-      </div>
+     </div>
     </footer>
   ) : (
     <Default {...Astro.props}>
@@ -32,7 +36,6 @@ const isHomepage = Astro.props.slug === '';
 
 <style>
   .footer {
-    background: var(--astro-background);
     padding: 1rem 0;
     text-align: center;
     border-top: 1px solid var(--astro-border);
@@ -46,12 +49,23 @@ const isHomepage = Astro.props.slug === '';
 
   .small-text {
     margin: 0;
-    color: var(--astro-text-secondary);
     font-size: 0.875rem;
   }
 
-  a {
-    color: var(--astro-link);
+  .hero-link {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .author-link {
+    color: var(--sl-color-accent);
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .repo-link {
+    color: var(--sl-color-gray-2);
     text-decoration: none;
   }
 
