chore(website): add yarn.lock

--- a/website/src/components/Header.astro
+++ b/website/src/components/Header.astro
@@ -9,6 +9,7 @@ import Logo from '../components/Logo.astro';
 
 ---
 
+<!-- tailwind is only used here? -->
 <div class="flex h-full items-center justify-between">
   <Logo {...Astro.props} />
   <div class="flex flex-grow"></div>
