--- a/website/src/components/Hero.astro
+++ b/website/src/components/Hero.astro
@@ -1,27 +1,37 @@
 ---
 import type { Props } from '@astrojs/starlight/props';
 import Default from '@astrojs/starlight/components/Hero.astro';
+
+const isHomepage = Astro.props.slug === '';
 ---
 
-<div class="main">
-  <div class="slider-container">
-    <button class="slider-button left">&lt;</button>
-    <div class="image-container">
-      <img class="demo-image"/>
+{
+  isHomepage ? (
+    <div class="main">
+      <div class="slider-container">
+        <button class="slider-button left">&lt;</button>
+        <div class="image-container">
+          <img class="demo-image"/>
+        </div>
+        <button class="slider-button right">&gt;</button>
+      </div>
+
+      <p class="main-text">
+        binsider gets inside of the ELF binaries.
+      </p>
+      <p class="description">
+        It provides powerful tools for both static and dynamic analysis, offering features similar to readelf and strace.
+        It allows you to easily inspect strings, examine linked libraries, and perform a hexdump, all within a user-friendly terminal user interface.
+      </p>
     </div>
-    <button class="slider-button right">&gt;</button>
-  </div>
+    <Default {...Astro.props}><slot /></Default>
+  ) : (
+    <Default {...Astro.props}>
+      <slot />
+    </Default>
+  )
+}
 
-  <p class="main-text">
-    binsider gets inside of the ELF binaries.
-  </p>
-  <p class="description">
-    It provides powerful tools for both static and dynamic analysis, offering features similar to readelf and strace.
-    It allows you to easily inspect strings, examine linked libraries, and perform a hexdump, all within a user-friendly terminal user interface.
-  </p>
-</div>
-
-<Default {...Astro.props}><slot /></Default>
 
 <script>
   import { index, images } from '../slider.js';
